...
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:textSize="14sp"
                    android:textColor="#898989"/>

                <EditText
                    android:id="@+id/edit_text_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:hint="Item name"
                    android:textColor="@android:color/black"
                    android:textColorHint="#b9b9b9"
...
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:textSize="14sp"
                    android:textColor="#898989"/>

                <EditText
                    android:id="@+id/edit_text_item_descrption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:hint="Item description"
                    android:textColor="@android:color/black"
                    android:textColorHint="#b9b9b9"
...
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:textSize="14sp"
                    android:textColor="#898989"/>

                <EditText
                    android:id="@+id/edit_text_item_supplier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:hint="Supplier"
                    android:textColor="@android:color/black"
                    android:textColorHint="#b9b9b9"
...
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:textSize="14sp"
                    android:textColor="#898989"/>

                <EditText
                    android:id="@+id/edit_text_item_unit_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:hint="Unit cost"
                    android:textColor="@android:color/black"
                    android:textColorHint="#b9b9b9"
...
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:textSize="14sp"
                    android:textColor="#898989"/>

                <EditText
                    android:id="@+id/edit_text_item_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:hint="Unit cost"
                    android:textColor="@android:color/black"
                    android:textColorHint="#b9b9b9"
...
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:textSize="14sp"
                    android:textColor="#898989"/>

                <EditText
                    android:id="@+id/edit_text_item_days"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:hint="Item days"
                    android:textColor="@android:color/black"
                    android:textColorHint="#b9b9b9"
...
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/dialog_info_create"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:background="@drawable/button_border"
                        android:text="CREATE"
                        android:textColor="#409b13"/>

                    <Button
                        android:id="@+id/dialog_info_cancel"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
...
