...

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_view_profile"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/bg_circle"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:text="M"
                        android:gravity="center"
                        android:textSize="20dp"/>

                    <TextView
                        android:id="@+id/text_view_location_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:paddingLeft="0dp"
                        android:text="Location Name"
                        android:maxLines="1"
...

                <TextView
                   android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@android:string/copyUrl"
                    android:id="@+id/text_view_team_leader_name"
                    android:paddingLeft="0dp"
                    android:paddingTop="5dp"
                    android:text=""
                    android:textColor="#969696"
                    android:textSize="11dp" />

...

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@android:string/copyUrl"
                    android:id="@+id/text_view_interactions"
                    android:paddingLeft="0dp"
                    android:paddingTop="5dp"
                    android:text=""
                    android:textColor="#969696"
                    android:textSize="11dp" />
            </LinearLayout>
...

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@android:string/copyUrl"
                    android:id="@+id/text_view_sales"
                    android:paddingLeft="0dp"
                    android:paddingTop="5dp"
                    android:text=""
                    android:textColor="#969696"
                    android:textSize="11dp" />
            </LinearLayout>
...
