...

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Login"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <EditText
                android:layout_marginTop="20dp"
                android:id="@+id/edit_text_email"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_orange"
                android:hint="@string/email"
                android:textSize="14dp"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/edit_text_password"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_orange"
                android:hint="@string/password"
                android:textSize="14dp"
                android:inputType="textPassword" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal"
                android:padding="12dp"
...
