...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical">
            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:id="@+id/linear_layout_expense_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_add_item"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_border"
                    android:text="ADD ITEM"
                    android:textColor="#409b13"/>

                <Button
                    android:id="@+id/button_submit"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
...
